--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-tailwind/react": "^1.4.2",
+    "@stomp/stompjs": "^7.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,7 +12,9 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.2.1",
+    "net": "^1.0.2",
     "postcss": "^8.4.21",
+    "print-js": "^1.6.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-chartjs-2": "^5.2.0",
@@ -21,6 +24,9 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
     "react-top-loading-bar": "^2.3.1",
+    "socket.io-client": "^4.6.1",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "tailwindcss": "^3.2.7",
     "web-vitals": "^2.1.4"
   },
